--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -176,6 +176,12 @@ p {
               }
             }
           }
+          &.margin-0 {
+            margin-top: 0
+          }
+          &.margin-10 {
+            margin-top: 10px;
+          }
           mat-form-field {
             width: 100%;
             img {
