UI bugs resolved

--- a/client/src/app/components/skill-description-popup/skill-description-popup.component.scss
+++ b/client/src/app/components/skill-description-popup/skill-description-popup.component.scss
@@ -16,6 +16,7 @@ $profile-form-padding-desktop: 60px;
     top: 10px;
     right: 10px;
     color: #318bd6;
+    cursor: pointer;
   }
   .title {
     color: rgba(map-get($md-cfaccent, 500), 0.84);
