--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
@@ -16,6 +16,7 @@ $profile-form-padding-desktop: 60px;
     top: 10px;
     right: 10px;
     color: #318bd6;
+    cursor: pointer;
   }
   & mat-dialog-content {
     .container {
