--- a/client/src/app/pages/company/companies/companies.component.html
+++ b/client/src/app/pages/company/companies/companies.component.html
@@ -161,7 +161,7 @@
         </div>
     </div>
 
-    <!-- <div class="pagination" *ngIf="companyList && companyList.length > 0">
+    <div class="pagination" *ngIf="companyList && companyList.length > 0">
         <ul type="none">
         <li class="large_pagination_button" (click)="pageClicked(currentPageNumber-1)">Prev Page</li>
         <li *ngFor="let pageNo of paginationArr" [ngClass]="{'active': pageNo == currentPageNumber}"
@@ -169,5 +169,5 @@
         </li>
         <li class="large_pagination_button" (click)="pageClicked(currentPageNumber+1)">Next Page</li>
         </ul>
-    </div> -->
+    </div>
 </div>
