--- a/client/src/app/pages/company/companies/companies.component.scss
+++ b/client/src/app/pages/company/companies/companies.component.scss
@@ -81,9 +81,12 @@ a {
 
     h3 {
       margin: 0;
-      line-height: 30px;
-      color: rgba(0, 29, 64, 0.24);
-      text-transform: uppercase;
+        line-height: 30px;
+        color: rgba(0, 29, 64, 0.24);
+        text-transform: uppercase;
+        font-size: 20px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
     }
   }
 
@@ -242,7 +245,7 @@ a {
       @include flex(column, flex-start, center);
 
       h2.name {
-        font-family: 'Poppins-Semibold', sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-weight: 600;
         font-size: 30px;
         line-height: 43px;
@@ -251,7 +254,7 @@ a {
       }
 
       h3.title {
-        font-family: 'Poppins-Medium', sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 23px;
@@ -261,7 +264,7 @@ a {
 
       h4.secondary-title {
         font-family: 'Roboto', sans-serif;
-        font-weight: 500;
+        font-weight: 400;
         font-style: normal;
         font-size: 16px;
         line-height: 17px;
