CAR-000 Corrected several typos and legal errors.

--- a/client/src/app/pages/legal-terms/legal-terms.component.html
+++ b/client/src/app/pages/legal-terms/legal-terms.component.html
@@ -134,16 +134,16 @@
          </li>
          <li>
              protect against fraud or other illegal activity or for risk management purposes;
-         </li> 
+         </li>
          <li>
              respond to inquiries or requests from public authorities;
          </li>
          <li>
              enforce our User Agreement;
-         </li> 
+         </li>
          <li>
              permit us to pursue available remedies or limit the damages that we may sustain;
-         </li> 
+         </li>
          <li>
              or comply with the law or a legal process.
          </li>
@@ -235,9 +235,9 @@
     </p>
 
     <h2>
-        How You Can Contact Us about Privacy Questions
+        How You Can Contact Us
     </h2>
     <p>
-        If you have questions or concerns regarding this Privacy Notice, you should contact us by using our company’s contact information.
+        If you have questions or concerns regarding this document, you should contact us by using our company’s contact information.
     </p>
 </div>
