--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -4,7 +4,7 @@
         <h1>yourCareerFair</h1>
     </div>
     <p>
-        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real-time for users to see and utilize. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, engaging, and compatible employment.
+        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real-time for users to see and utilize. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and at helping all people to find appropriate, engaging, and compatible employment.
         <br>
         <br>
         yourCareerFair provides additional free services on top of its search engine and qualification level estimate assessments. The application maintains free application management and applicant tracking system functionality for all users. It allows recruiters to save notes on applicants, immediately notifies applicants when a recruiter makes a decision and allows for bulk/one-click application submissions. In addition, yourCareerFair, as indicated by its name, allows for schools and institutions to host online and in-person career fairs using the site’s resources. As a recruiter, instead of accepting paper resumes, simply have your attendees submit online resumes to your position page on yourCareerFair and focus more on interviews and interacting with your candidates as our algorithms handle the heavy lifting.
@@ -17,7 +17,7 @@
         <br> - Use the application template tool to fill out all required information for job applications and never fill it out again.
         <br> - See which companies require, don’t require, prefer, or don’t prefer cover letters.
         <br> - Display your skills and express your goals on your profile page.
-        <br> - Gain access to our unique search engine which matches your skill sets, education, experience, and education to the requirements of current openings.
+        <br> - Gain access to our unique search engine which sorts results by attempting to maximize the probability of a successful application.
         <br> - Keep track of all of your current job or internship applications and where they are in the selection process.
         <br> - Don’t worry, the email you provide us is only used if you forget your password and to verify your identity tentatively.
     </p>
@@ -30,18 +30,17 @@
         <br> - Easily add your company to our database to allow for position creation and application submissions.*
         <br> - Effectively search through a vast array of applicants utilizing the customizable advanced search utility.
         <br> - Share notes on candidates with other recruiters and employers at your company.
-        <br> - Have the option to redirect all recruiting-related emails and messages from applicants to your companies yourCareerFair account.
+        <br> - Have the option to redirect all recruiting related emails and messages from applicants to your company's yourCareerFair account.
         <br> - Have the ability to share your applicant list with other recruiters in your company.
         <br> - Have the ability to quickly accept, defer, wait list, or reject applications.
         <br> - Easily manage all career fairs hosted by your institution
-        <br> - Manage all applicants for free on the recruiter app.
         <br><br>
         * Please read our legal policy on proper site usage
     </p>
 
     <h2> Research Disclaimer </h2>
     <p>
-        Some information will be used, without loss of confidentiality to the individual user, to research, among other subject matters, the efficacy of electronic/internet-based market mediums at encouraging the formation of efficient market places. Further studies will also be conducted on information gathered via this system to deduce whether or not more potentially desirable Pareto efficient outcomes can be achieved via the use of similar applications. Put colloquially, this website serves the dual purpose of a research tool to determine whether or not an application/tool similar to this can be utilized to increase the social utility of an economic system without actually interfering directly or significantly with market interactions. In addition to research, this site will publish general information regarding the labor market as determined by this site. This information will include, but is not limited to, general unemployment rates, the average number of applications submitted per person, etc. The hope is to create an open research platform for labor economic academic and legislative research.
+        Some information will be used, without loss of confidentiality to the individual user, to research, among other subject matters, the efficacy of electronic/internet-based market mediums at encouraging the formation of efficient market places. Further studies will also be conducted on information gathered via this system to deduce whether or not more potentially desirable Pareto efficient outcomes can be achieved via the use of similar applications. Put colloquially, this website serves the dual purpose of a research tool to determine whether or not an application/tool similar to this can be utilized to increase the social utility of an economic system without actually interfering directly or significantly with market interactions. In addition to research, this site will publish general information regarding the labor market as determined by this site. This information will include, but is not limited to, general unemployment rates, the average number of applications submitted per person, etc. The hope is to create an open research platform for labor economic, academic, and legislative research.
     </p>
 
     <h1>Gregory Cho</h1>
@@ -53,6 +52,6 @@
     <h1>Dimitar Dimitrov</h1>
     <h2>Co-Founder and Senior Front End Manager</h2>
     <p>
-        A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of this site’s front end resources.
+        A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of this yourCareerFair’s front end resources.
     </p>
 </div>
