--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -127,6 +127,9 @@
         <a routerLink='my-profile' routerLinkActive="active-link" class="dropdown-href">
           My Profile
         </a>
+        <a routerLink='password/reset' routerLinkActive="active-link" class="dropdown-href">
+          Change Password
+        </a>
         <a routerLink='messages' routerLinkActive="active-link" class="dropdown-href">
           Messages
         </a>
